# xml_data_importer

./: .env.example  .gitignore  README.md  main.py  prod_dop.xml  pyproject.toml  warehouses.xml
deploy/scripts/: setup_perms.sh  update_service.sh
deploy/systemd/: xml-import.path  xml-import.service
importer/: config.py  connector.py  database.py  db.py  import_prod_dop.py  import_stock_prices.py  import_warehouses.py  init_db.py  logger.py  main.py  report.py  settings.py  sql_loader.py  sql_utils.py  sync.py  xml_utils.py
importer/sql/: 001_create_tables.sql
importer/sql/prod_dop/: delete_missing.sql  insert.sql  tmp_table.sql  update.sql  upsert.sql
importer/sql/stock_prices/: clean_logs.sql  delete_missing_stocks_per_product.sql  delete_stocks_for_missing_products.sql  insert_stocks_log.sql  insert_tmp_products.sql  insert_tmp_stocks.sql  reset_missing_products.sql  reset_missing_skus.sql  tmp_products.sql  tmp_stocks.sql  update_shop_product.sql  update_shop_product_skus.sql  upsert_shop_product_stocks.sql
importer/sql/warehouses/: delete_missing.sql  insert.sql  tmp_table.sql  update.sql  upsert.sql
nginx/: importer_report.conf
systemd/: xml-import.service
